New support for a 2d map display using LeafletJS